--- a/app/src/main/res/layout/view_holder_recently_active_item.xml
+++ b/app/src/main/res/layout/view_holder_recently_active_item.xml
@@ -5,61 +5,57 @@
 
     <data>
         <variable
-            name="message"
-            type="com.saurav.epoxyrecyclerview.model.Message" />
+            name="profile"
+            type="com.saurav.epoxyrecyclerview.model.Profile" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
         android:clickable="true"
         android:focusable="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp">
+            android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/message_profile_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:id="@+id/recently_added_profile_image"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:contentDescription="@null"
                 android:src="@drawable/ic_profile_image"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/message_profile_name"
+                android:id="@+id/recently_added_profile_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:textAlignment="center"
                 android:textAppearance="?attr/textAppearanceBody1"
-                android:text="@{message.username}"
-                app:layout_constraintBottom_toTopOf="@id/message_content"
+                android:text="@{profile.name}"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/message_profile_image"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Message Title" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/recently_added_profile_image"
+                tools:text="Title" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/message_content"
+                android:id="@+id/recently_added_last_seen"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:textAppearance="?attr/textAppearanceBody2"
-                android:text="@{message.content}"
+                android:layout_marginBottom="16dp"
+                android:textAlignment="center"
+                android:textAppearance="?attr/textAppearanceCaption"
+                android:text="@{profile.lastSeen}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/message_profile_image"
-                app:layout_constraintTop_toBottomOf="@id/message_profile_name"
-                tools:text="@tools:sample/lorem" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/recently_added_profile_name"
+                tools:text="2 min ago" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
